<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorredish">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/size3dp"
            android:text="@string/are_uhh_sure_exit"
            android:textColor="@color/colorwhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size30dp"
            android:gravity="right"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_text"
                android:padding="@dimen/size5dp"
                android:text="@string/cancel"
                android:textColor="@color/colorwhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_text"
                android:padding="@dimen/size5dp"
                android:text="@string/ok"
                android:textColor="@color/colorwhite"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>