<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorwhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size5dp"
        android:orientation="vertical"
        android:padding="@dimen/size5dp">

        <EditText
            android:id="@+id/et_enter"
            android:textColor="@color/colorblack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:hint="@string/enter_text"
            android:padding="@dimen/size3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size5dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_text"
                android:padding="@dimen/size5dp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_text"
                android:padding="@dimen/size5dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>