<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorwhitetrans">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/size5dp"

        tools:context=".fragments.ColorPickerFragment">

        <com.rtugeek.android.colorseekbar.ColorSeekBar
            android:id="@+id/colorpiker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size5dp"
            android:layout_marginBottom="@dimen/size5dp"
            app:showAlphaBar="true"
            app:thumbHeight="40dp" />

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size25dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="@dimen/size5dp"
            android:background="@drawable/rounded_background"
            android:padding="@dimen/size5dp" />

        <TextView
            android:id="@+id/iv_choosefromgalery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="@dimen/size5dp"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:padding="@dimen/size5dp"
            android:text="@string/choosefromgalery"
            android:textColor="@color/colorblack"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seek"
            android:layout_marginTop="@dimen/size10dp"
            android:gravity="right"
            android:layout_marginBottom="@dimen/size5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_text"
                android:padding="@dimen/size5dp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_text"
                android:padding="@dimen/size5dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>